--- a/angular/src/app/Cards/cards.component.html
+++ b/angular/src/app/Cards/cards.component.html
@@ -1,22 +1,14 @@
-<h2>POKEDEX</h2>
-<mat-form-field class="example-form-field">
-    <mat-label>Clearable input</mat-label>
-    <input matInput type="text" [(ngModel)]="value">
-    <button *ngIf="value" matSuffix mat-icon-button aria-label="Clear" (click)="value=''">
-      <mat-icon>close</mat-icon>
-    </button>
-  </mat-form-field>
+
 <mat-divider></mat-divider>
 
 <mat-grid-list cols="3">
-  <mat-grid-tile *ngFor="let item of arr"> 
+  <mat-grid-tile *ngFor="let poke of pokes"> 
     <mat-card class="example-card" >
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title>Shiba Inu</mat-card-title>
+        <mat-card-title>{{ poke.name }}</mat-card-title>
         <mat-card-subtitle>Dog Breed</mat-card-subtitle>
       </mat-card-header>
-      <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
       <mat-card-content>
         <p>
           The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
