--- a/angular/src/app/components/Cards/cards.component.html
+++ b/angular/src/app/components/Cards/cards.component.html
@@ -1,4 +1,3 @@
-
 <mat-divider></mat-divider>
 
 <mat-grid-list cols="3">
@@ -11,11 +10,7 @@
         <mat-card-subtitle>{{ poke }}</mat-card-subtitle>
       </mat-card-header>
       <mat-card-content>
-        <p>
-          The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-          A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-          bred for hunting.
-        </p>
+        <app-poke-details [pokeNames]="pokeNames"></app-poke-details>
       </mat-card-content>
       <mat-card-actions>
         <button mat-raised-button color="primary">Warn</button>
