--- a/angular/src/app/components/Cards/cards.component.html
+++ b/angular/src/app/components/Cards/cards.component.html
@@ -1,22 +1,9 @@
-<mat-divider></mat-divider>
 
 <mat-grid-list cols="3">
   <mat-grid-tile *ngFor="let poke of pokes; index as i"> 
-
-    <mat-card class="example-card" >
-      <mat-card-header>
-        <div mat-card-avatar class="example-header-image"></div>
-        <mat-card-title> {{ poke.name }}</mat-card-title>
-        <mat-card-subtitle>{{ poke }}</mat-card-subtitle>
-      </mat-card-header>
-      <mat-card-content>
-        <app-poke-details [pokeNames]="pokeNames"></app-poke-details>
-      </mat-card-content>
-      <mat-card-actions>
-        <button mat-raised-button color="primary">Warn</button>
-        <button mat-raised-button color="warn">SHARE</button>
-      </mat-card-actions>
-    </mat-card>
+    
+        <app-poke-details [pokeName]="poke.name"></app-poke-details>
+      
   </mat-grid-tile>
 </mat-grid-list>
 
